styles/styles.css
* {font-family: 'Lato', sans-serif;
}
body {
    padding: 0;
    margin: 0;
}
.header {
    margin: 0;
    width: 100%;
    height: auto;
    background: rgba(229, 84, 115, 0.10);
}
.container {
    max-width: 1200px;
    margin: 0 auto;
    
}
.banner{

    display:flex;
}
.bannerfirstdiv{
    align-self: center;
}
.banner-header {
color: #272727;
font-size: 72px;
font-style: normal;
font-weight: 800;
line-height: normal;
}
.banner-paragraph {
    color: rgba(39, 39, 39, 0.60);
font-family: Lato;
font-size: 18px;
font-style: normal;
font-weight: 400;
line-height: 30px;
}
.btn-class {
    color: #FFF;
font-family: Lato;
font-size: 20px;
font-style: normal;
font-weight: 700;
line-height: normal;
border-radius: 8px;
background: #E55473;
padding: 20px 43px;
}
/*
.main-flowers {
    width: 310px;
height: 428px;
flex-shrink: 0;
}*/


/* featured flower part */
.featured-flower {
margin-top: 150px;
}
.featured-flower-header {
    color: #272727;
text-align: center;
font-family: Lato;
font-size: 40px;
font-style: normal;
font-weight: 800;
line-height: normal;


}
.featured-flower-paragraph {
    color: rgba(39, 39, 39, 0.60);
text-align: center;
font-family: Lato;
font-size: 18px;
font-style: normal;
font-weight: 400;
line-height: 30px;

}
.section-flowers {
    display: flex;
}

.section-flowers div{
    width: 33%;
    margin:10px;

}
.type-of-flowers {
    display: flex;
    justify-content: space-around;
}

.type-of-flowers div{

    padding:10px;
}


.main-flowers{
    width: 100%;
    height: 450px;
    border-radius: 300px 300px 0px 0px;
   
    
}
.color1{
    background: rgba(167, 33, 98, 0.15);

}

.color2{
    
background: rgba(5, 151, 160, 0.15);}
.color3{
    background: rgba(71, 125, 17, 0.15);

}

.section-flowers-anchor {
    display: flex;
    color: #272727;
text-align: center;
font-family: Lato;
font-size: 24px;
font-style: normal;
font-weight: 700;
line-height: 35px;
text-decoration-line: underline;
justify-content: space-around;
}
/* service details part */
.service-details {
    margin-top: 150px;margin-bottom: 150px;
    width: 100%;

padding: 50px 50px;
    display: flex;
   justify-content: space-around;
    border-radius: 8px;
    background: rgba(39, 39, 39, 0.05);
}
.service-details div{

    text-align:center;
}

/* offer details */
.offer-details {
    margin-top: 15;
    border-radius: 8px;
    background: rgba(229, 84, 115, 0.05);
    justify-content: space-around;
    padding: 100px 100px;
}

.offer-details-inner {

    display: flex;
}

.offer-details-inner div{
    align-self: center;
    text-align: center;
}
.offer-details-heading {
    color: #272727;
font-family: Lato;
font-size: 40px;
font-style: normal;
font-weight: 800;
line-height: normal;text-align: center;
}
.offer-details-paragraph {
    color: rgba(39, 39, 39, 0.60);
text-align: center;
font-family: Lato;
font-size: 18px;
font-style: normal;
font-weight: 400;
line-height: 30px;
}

/* Instagram part */
.Instagram {
    margin-top: 150px;
    text-align: center;
    color: #272727;
text-align: center;
font-family: Lato;
font-size: 40px;
font-style: normal;
font-weight: 800;
line-height: normal;
}
.insta-content {
    text-align: center;
    color: rgba(39, 39, 39, 0.60);
text-align: center;
font-family: Lato;
font-size: 18px;
font-style: normal;
font-weight: 400;
line-height: 30px;
}

/* Subscribe-section */
.Subscribe-section {
    margin-top: 150px;
    text-align: center;
    background-image: url(/Rectangle\ 9.png);
    background-repeat: no-repeat;
}
.Subscribe-header {
    color: #272727;
font-family: Lato;
font-size: 40px;
font-style: normal;
font-weight: 800;
line-height: normal;
}
.Subscribe-paragraph {
    color: rgba(39, 39, 39, 0.60);
text-align: center;
font-family: Lato;
font-size: 18px;
font-style: normal;
font-weight: 400;
line-height: 30px;
}

/* footer part */

.footer-style {
    margin-top: 150px;
    width: 100%;
    height: 449px;
    text-align: center;
    background: #111010;
    width: 100%;
    height: auto;
    flex-shrink: 0;
}
.footer-header {
    color: white;
}
.footer-paragraph {
    color: rgba(255, 255, 255, 0.90);
text-align: center;
font-family: Lato;
font-size: 18px;
font-style: normal;
font-weight: 400;
line-height: 30px;
}
.footer-right-reserve {
color: rgba(255, 255, 255, 0.40);
text-align: center;
font-size: 16px;
font-weight: 400;

}
.web-color {
    color: #E55473;
}

